--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
             res.srcDirs =
                     [
                             'src/main/res/layout/item',
+                            'src/main/res/layout/fragment',
                             'src/main/res/layout',
                             'src/main/res'
                     ]
