通过样式设置actionbar高度

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity android:name=".MainActivity">
 
         </activity>
-        <activity android:name=".BroswerActivity"></activity>
+        <activity android:name=".BroswerActivity"
+            android:theme="@style/CustomActionBarTheme"></activity>
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
