--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -44,10 +44,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.bumptech.glide:glide:4.0.0'
-
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-  //  compile 'cn.bmob.android:bmob-sdk:3.5.5'
-//    compile 'cn.bmob.android:http-legacy:1.0'
+    //  compile 'cn.bmob.android:bmob-sdk:3.5.5'
+    //    compile 'cn.bmob.android:http-legacy:1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
