美图点击放大

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,10 @@
         android:roundIcon="@drawable/ic_launcher_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".BroswerActivity"
-            android:theme="@style/CustomActionBarTheme"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".BroswerActivity"
+            android:theme="@style/CustomActionBarTheme" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".service.BmobService"/>
+
+        <service android:name=".service.BmobService" />
+
+        <activity android:name=".BigImageActivity"></activity>
     </application>
 
 </manifest>
